<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>cz.tyckouni</groupId>
	<artifactId>mvp-gate</artifactId>
	<version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>mvp-gate</name>

    <modules>
		<module>admin/business</module>
		<module>admin/components/database</module>
		<module>admin/components/graphql</module>
		<module>admin/components/grpc</module>
		<module>admin/components/main</module>
		<module>authentication/business</module>
		<module>common/grpc</module>
		<module>common/telemetry</module>
		<module>entity</module>
    </modules>
    <properties>
	    
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>

		<grpc.version>1.54.1</grpc.version>
		<grpc.kotlin.version>1.3.0</grpc.kotlin.version>
		<java.version>17</java.version>
		<lognet.grpc.version>5.1.1</lognet.grpc.version>
		<kotlinx.coroutines.version>1.6.4</kotlinx.coroutines.version>
		<mockito.kotlin.version>4.1.0</mockito.kotlin.version>
		<protobuf.version>3.22.0</protobuf.version>
		<protobuf.protoc.version>3.22.0</protobuf.protoc.version>
	    
	        <!-- sonar cloud properties -->
		<sonar.organization>vojtech-sassmann</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- start of mvp-gate dependencies -->
			<dependency>
				<groupId>cz.tyckouni</groupId>
				<artifactId>mvp-gate-entity</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>cz.tyckouni</groupId>
				<artifactId>mvp-gate-admin-business</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>cz.tyckouni</groupId>
				<artifactId>mvp-gate-admin-database</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>cz.tyckouni</groupId>
				<artifactId>mvp-gate-admin-grapqhql</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>cz.tyckouni</groupId>
				<artifactId>mvp-gate-admin-grpc</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>cz.tyckouni</groupId>
				<artifactId>mvp-gate-grpc</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>cz.tyckouni</groupId>
				<artifactId>mvp-gate-telemetry</artifactId>
				<version>${project.version}</version>
			</dependency>
			<!-- end of mvp-gate dependencies -->

			<!-- start of external dependencies -->
			<dependency>
				<groupId>org.jetbrains.kotlinx</groupId>
				<artifactId>kotlinx-coroutines-core</artifactId>
				<version>${kotlinx.coroutines.version}</version>
				<type>pom</type>
			</dependency>
			<dependency>
				<groupId>io.grpc</groupId>
				<artifactId>grpc-netty</artifactId>
				<version>${grpc.version}</version>
			</dependency>
			<dependency>
				<groupId>io.github.lognet</groupId>
				<artifactId>grpc-spring-boot-starter</artifactId>
				<version>${lognet.grpc.version}</version>
			</dependency>
			<dependency>
				<groupId>io.grpc</groupId>
				<artifactId>grpc-protobuf</artifactId>
				<version>${grpc.version}</version>
			</dependency>
			<dependency>
				<groupId>io.grpc</groupId>
				<artifactId>grpc-kotlin-stub</artifactId>
				<version>${grpc.kotlin.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.protobuf</groupId>
				<artifactId>protobuf-kotlin</artifactId>
				<version>${protobuf.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mockito.kotlin</groupId>
				<artifactId>mockito-kotlin</artifactId>
				<version>${mockito.kotlin.version}</version>
				<scope>test</scope>
			</dependency>
			<!-- end of external dependencies -->
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.jetbrains.kotlin</groupId>
			<artifactId>kotlin-stdlib</artifactId>
			<version>${kotlin.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jetbrains.kotlin</groupId>
			<artifactId>kotlin-stdlib-jdk8</artifactId>
			<version>${kotlin.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jetbrains.kotlin</groupId>
			<artifactId>kotlin-test</artifactId>
			<version>${kotlin.version}</version>
			<scope>test</scope>
		</dependency>
    </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.jetbrains.kotlin</groupId>
				<artifactId>kotlin-maven-plugin</artifactId>
				<version>${kotlin.version}</version>
				<executions>
					<execution>
						<id>compile</id>
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
					<execution>
						<id>test-compile</id>
						<phase>test-compile</phase>
						<goals>
							<goal>test-compile</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<jvmTarget>${maven.compiler.target}</jvmTarget>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>ktlint</id>
						<phase>verify</phase>
						<configuration>
							<target name="ktlint">
								<java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
									  classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
									<arg value="src/**/*.kt"/>
									<!-- see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information -->
								</java>
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
					<execution>
						<id>ktlint-format</id>
						<configuration>
							<target name="ktlint">
								<java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
									  classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
									<!-- Note: the JVM args below are only required when running ktlint with Java 16+ in format mode -->
									<jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED"/>
									<jvmarg value="--add-opens=java.base/java.util=ALL-UNNAMED"/>
									<arg value="-F"/>
									<arg value="src/**/*.kt"/>
									<!-- see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information -->
								</java>
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>com.pinterest</groupId>
						<artifactId>ktlint</artifactId>
						<version>0.48.2</version>
					</dependency>
					<!-- additional 3rd party ruleset(s) can be specified here -->
				</dependencies>
			</plugin>
		</plugins>
	</build>

</project>
